CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(stereo)
set(CMAKE_BUILD_TYPE Release)
find_package(OpenCV REQUIRED)
include_directories(/usr/include/spinnaker)
link_directories(/usr/lib)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -o3 -pthread")
add_executable(stereo main.cpp FlirBlackFlySCameraControl.h FlirBlackFlySCameraControl.cpp jetsonGPIO.h jetsonGPIO.cpp)
target_link_libraries(stereo libSpinnaker.so ${OpenCV_LIBS})
